[package]
name = "rsa_arbitray_precision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num_cpus = "1.0"

[dependencies.rug]
version = "1.16"
default-features = false
features = ["integer", "rand"]